--- a/application/client/package.json
+++ b/application/client/package.json
@@ -2,7 +2,7 @@
   "name": "react-demo",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "proxy": "http://0.0.0.0:3000",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.9.0",
