--- a/application/server/package.json
+++ b/application/server/package.json
@@ -9,9 +9,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "postman": "^0.2.0"
   }
 }
