--- a/application/server/package.json
+++ b/application/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.0.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.1.6",
     "express-flash": "0.0.2",
