--- a/application/server/package.json
+++ b/application/server/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "postman": "^0.2.0"
+    "postman": "^0.2.0",
+    "raml2html": "^7.5.0"
   }
 }
