--- a/application/server/package.json
+++ b/application/server/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "postman": "^0.2.0",
-    "raml2html": "^7.5.0"
+    "raml2html": "^7.5.0",
+    "request": "^2.88.2"
   }
 }
