--- a/application/client/package.json
+++ b/application/client/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
