--- a/application/server/package.json
+++ b/application/server/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "client": "cd ../client && npm start",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "concurrently": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
