--- a/application/server/package.json
+++ b/application/server/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
