--- a/application/client/package.json
+++ b/application/client/package.json
@@ -5,6 +5,9 @@
   "proxy": "http://0.0.0.0:3000",
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-stormpath": "^4.0.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.9.0",
