--- a/application/client/package.json
+++ b/application/client/package.json
@@ -5,12 +5,14 @@
   "proxy": "http://0.0.0.0:3000",
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
