--- a/application/server/package.json
+++ b/application/server/package.json
@@ -26,6 +26,7 @@
     "passport-local": "^1.0.0",
     "postman": "^0.2.0",
     "raml2html": "^7.5.0",
+    "react-redux": "^7.2.0",
     "request": "^2.88.2"
   }
 }
