--- a/application/server/package.json
+++ b/application/server/package.json
@@ -26,6 +26,7 @@
     "postman": "^0.2.0",
     "raml2html": "^7.5.0",
     "react-redux": "^7.2.0",
+    "redux-thunk": "^2.3.0",
     "request": "^2.88.2"
   }
 }
