--- a/application/client/package.json
+++ b/application/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "js-cookie": "^2.2.1",
     "pm2": "^4.4.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0",
