--- a/application/server/package.json
+++ b/application/server/package.json
@@ -8,6 +8,7 @@
     "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.1.0",
     "cookie-parser": "~1.4.4",
@@ -27,7 +28,6 @@
     "postman": "^0.2.0",
     "raml2html": "^7.5.0",
     "react-redux": "^7.2.0",
-    "redux-thunk": "^2.3.0",
-    "request": "^2.88.2"
+    "redux-thunk": "^2.3.0"
   }
 }
