--- a/application/client/package.json
+++ b/application/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "downloadjs": "^1.4.7",
+    "fs": "0.0.1-security",
     "js-cookie": "^2.2.1",
     "pm2": "^4.4.0",
     "react": "^16.9.0",
@@ -18,6 +19,7 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.2",
     "styled-components": "^5.1.0"
   },
   "scripts": {
