--- a/application/client/package.json
+++ b/application/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
     "downloadjs": "^1.4.7",
     "fs": "0.0.1-security",
     "js-cookie": "^2.2.1",
@@ -13,6 +14,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.7.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
