--- a/application/server/package.json
+++ b/application/server/package.json
@@ -27,6 +27,7 @@
     "passport-local": "^1.0.0",
     "postman": "^0.2.0",
     "raml2html": "^7.5.0",
+    "react-ga": "^2.7.0",
     "react-redux": "^7.2.0",
     "redux-thunk": "^2.3.0"
   }
