--- a/application/client/package.json
+++ b/application/client/package.json
@@ -2,7 +2,7 @@
   "name": "react-demo",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://18.191.184.143:3001/",
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
